[gd_scene load_steps=2 format=3 uid="uid://wkyffjkvp7av"]

[ext_resource type="Script" path="res://scenes/village/village_view.gd" id="1_oar4x"]

[node name="VillageView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oar4x")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMenuMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 140.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="TopMenuMarginContainer"]
layout_mode = 2

[node name="HomeButtonContainer" type="ColorRect" parent="TopMenuMarginContainer/Control"]
layout_mode = 0
offset_right = 450.0
offset_bottom = 100.0
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="HomeButton" type="Button" parent="TopMenuMarginContainer/Control/HomeButtonContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = " 마을 선택으로 "

[node name="FarmButtonContainer" type="ColorRect" parent="TopMenuMarginContainer/Control"]
layout_mode = 0
offset_left = 460.0
offset_right = 910.0
offset_bottom = 100.0
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="FarmButton" type="Button" parent="TopMenuMarginContainer/Control/FarmButtonContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = " 내 밭으로 가기 "

[node name="HBoxContainer" type="HBoxContainer" parent="TopMenuMarginContainer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BottomMenuMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 940.0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="BottomMenuMarginContainer"]
layout_mode = 2

[node name="EnterButtonContainer" type="ColorRect" parent="BottomMenuMarginContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -50.0
offset_right = 950.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="EnterButton" type="Button" parent="BottomMenuMarginContainer/Control/EnterButtonContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "던전 진입하기"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 140.0
offset_right = 1920.0
offset_bottom = 940.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 20

[node name="Background" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Background/MarginContainer"]
layout_mode = 2

[node name="HomeGridContainer" type="GridContainer" parent="MarginContainer/Background/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 50
columns = 5

[node name="Noticepopup" type="Control" parent="MarginContainer/Background"]
anchors_preset = 0
offset_left = 600.0
offset_top = 300.0
offset_right = 640.0
offset_bottom = 340.0

[node name="Popups" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="button_down" from="TopMenuMarginContainer/Control/HomeButtonContainer/HomeButton" to="." method="_on_home_button_down"]
[connection signal="button_down" from="TopMenuMarginContainer/Control/FarmButtonContainer/FarmButton" to="." method="_on_farm_button_down"]
[connection signal="button_down" from="BottomMenuMarginContainer/Control/EnterButtonContainer/EnterButton" to="." method="_on_enter_button_down"]
